# gadget-ng

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/gadget-ng-analysis/: Cargo.toml
crates/gadget-ng-analysis/src/: assembly_bias.rs  bao.rs  bispectrum.rs  catalog.rs  cmb_lensing.rs  correlation.rs  emission_lines.rs  fisher.rs  fof.rs  fof_parallel.rs  halo_mass_function.rs  halo_spin.rs  halo_statistics.rs  halofit.rs  lib.rs  lightcone.rs  luminosity.rs  lya_forest.rs  merger_tree.rs  mock_catalog.rs  nfw.rs  pk_correction.rs  pk_rsd.rs  power_spectrum.rs  sps_tables.rs  subfind.rs  sz_effect.rs  velocity_profile.rs  xray.rs
crates/gadget-ng-analysis/tests/: analysis_pipeline.rs
crates/gadget-ng-cli/: Cargo.toml
crates/gadget-ng-cli/src/: analyze_cmd.rs  config_load.rs  engine.rs  error.rs  fisher_cmd.rs  insitu.rs  mah_cmd.rs  main.rs  merge_tree_cmd.rs
crates/gadget-ng-cli/tests/: fisher_pk_model.rs  stepping_rayon_smoke.rs
crates/gadget-ng-core/: Cargo.toml
crates/gadget-ng-core/benches/: direct_gravity.rs
crates/gadget-ng-core/src/: config.rs  cosmology.rs  dark_matter.rs  gpu_bridge.rs  gravity.rs  gravity_simd.rs  ic.rs  ic_2lpt.rs  ic_mhd.rs  ic_zeldovich.rs  lib.rs  modified_gravity.rs  particle.rs  transfer_fn.rs  vec3.rs
crates/gadget-ng-core/tests/: mejoras_convergence.rs  roadmap_cosmo_helpers.rs  split_vs_full_accel.rs
crates/gadget-ng-cuda/: Cargo.toml  build.rs
crates/gadget-ng-cuda/benches/: cuda_vs_simd.rs  parity_bench.rs
crates/gadget-ng-cuda/cuda/: analysis_kernels.cu  cooling_kernels.cu  cuda_pool.cu  cuda_pool.h  direct_gravity.cu  direct_gravity.h  dust_kernels.cu  mhd_kernels.cu  molecular_kernels.cu  pm_gravity.cu  pm_gravity.h  rt_kernels.cu  sph_kernels.cu  tree_kernels.cu
crates/gadget-ng-cuda/src/: analysis_solver.rs  availability.rs  cooling_solver.rs  direct_solver.rs  dust_solver.rs  ffi.rs  lib.rs  mhd_solver.rs  molecular_solver.rs  pm_solver.rs  pool.rs  rt_solver.rs  sph_solver.rs  tree_solver.rs
crates/gadget-ng-cuda/tests/: cuda_analysis_smoke.rs  cuda_cooling_smoke.rs  cuda_direct_smoke.rs  cuda_dust_smoke.rs  cuda_h2_smoke.rs  cuda_mhd_smoke.rs  cuda_parity_sph.rs  cuda_pm_smoke.rs  cuda_rt_smoke.rs  cuda_sph_smoke.rs  cuda_tree_smoke.rs
crates/gadget-ng-gpu/: Cargo.toml
crates/gadget-ng-gpu/benches/: gpu_vs_cpu.rs
crates/gadget-ng-gpu/src/: bh_fmm.rs  bh_monopole.rs  hex_dt_generated.inc.wgsl  lib.rs  soa.rs  solver.rs  treepm_short_wgsl.rs
crates/gadget-ng-gpu/tests/: bh_fmm_order4_wgpu.rs  bh_monopole_wgpu_cpu.rs  treepm_sr_wgpu_cpu.rs  v1_gpu_tests.rs
crates/gadget-ng-hip/: Cargo.toml  build.rs
crates/gadget-ng-hip/hip/: direct_gravity.h  direct_gravity.hip  pm_gravity.h  pm_gravity.hip
crates/gadget-ng-hip/src/: availability.rs  direct_solver.rs  ffi.rs  lib.rs  pm_solver.rs
crates/gadget-ng-hip/tests/: hip_pm_smoke.rs
crates/gadget-ng-integrators/: Cargo.toml
crates/gadget-ng-integrators/src/: adaptive_dt.rs  hierarchical.rs  leapfrog.rs  lib.rs  yoshida.rs
crates/gadget-ng-integrators/tests/: harmonic_oscillator_energy.rs  hierarchical_energy.rs  hierarchical_jerk_kepler.rs  hierarchical_level_histogram.rs  leapfrog_cosmo_momentum.rs  momentum_lattice.rs  yoshida_cosmo_flat.rs  yoshida_harmonic_convergence.rs  yoshida_kepler_orbit.rs  yoshida_linear_momentum.rs
crates/gadget-ng-io/: Cargo.toml
crates/gadget-ng-io/src/: bincode_writer.rs  error.rs  gadget4_attrs.rs  halo_catalog_hdf5.rs  hdf5_parallel_writer.rs  hdf5_writer.rs  lib.rs  msgpack_writer.rs  netcdf_writer.rs  provenance.rs  reader.rs  snapshot.rs  writer.rs
crates/gadget-ng-mhd/: Cargo.toml
crates/gadget-ng-mhd/benches/: advanced_bench.rs  alfven_bench.rs  ap21_cr_streaming.rs  dedner_backend_bench.rs  simd_cpu_bench.rs
crates/gadget-ng-mhd/src/: anisotropic.rs  braginskii.rs  cleaning.rs  dynamo.rs  flux_freeze.rs  induction.rs  lib.rs  nonideal.rs  pressure.rs  reconnection.rs  relativistic.rs  stats.rs  streaming.rs  turbulence.rs  two_fluid.rs
crates/gadget-ng-parallel/: Cargo.toml
crates/gadget-ng-parallel/src/: decompose.rs  domain.rs  halo3d.rs  lib.rs  mpi_rt.rs  pack.rs  serial.rs  sfc.rs
crates/gadget-ng-parallel/tests/: distributed_tree_energy.rs  let_validation.rs  overlap_validation.rs  sfc_hardening.rs
crates/gadget-ng-physics/: Cargo.toml
crates/gadget-ng-physics/src/: helpers.rs  lib.rs
crates/gadget-ng-physics/tests/: bh_force_accuracy.rs  cold_collapse.rs  cosmo_mpi.rs  cosmo_pm.rs  cosmo_pm_dist.rs  cosmo_pm_slab.rs  cosmo_serial.rs  gadget2_sph_validation.rs  hierarchical_cosmo_energy.rs  kepler_orbit.rs  lpt2_ics.rs  pf01_leapfrog_convergence.rs  pf02_kepler_orbit.rs  pf03_fmm_convergence.rs  pf04_pm_mesh_convergence.rs  pf05_sod_shock_tube.rs  pf06_sph_pressure_noise.rs  pf07_mhd_turbulence_spectrum.rs  pf08_reconnection_scaling.rs  pf09_rmhd_energy_conservation.rs  pf10_two_fluid_equilibrium.rs  pf11_de_luminosity_distance.rs  pf12_sidm_cross_section.rs  pf13_fr_chameleon.rs  pf14_mock_catalog_smhm.rs  pf15_xray_lx_tx.rs  pf16_neutrino_pk_suppression.rs  phase100_agn_fof.rs  phase101_softening.rs  phase102_hdf5_gadget4.rs  phase103_sfc_weighted.rs  phase105_jsonl_sph.rs  phase106_restart_sph.rs  phase107_merger_trees.rs  phase108_galactic_winds.rs  phase109_metals_particle.rs  phase110_enrichment.rs  phase111_metal_cooling.rs  phase112_stellar_spawning.rs  phase113_snia_dtd.rs  (+117 more)
crates/gadget-ng-pm/: Cargo.toml
crates/gadget-ng-pm/benches/: pm_gravity.rs
crates/gadget-ng-pm/src/: amr.rs  amr_mpi.rs  cic.rs  distributed.rs  fft_backend.rs  fft_poisson.rs  lib.rs  pencil_fft.rs  slab_fft.rs  slab_pm.rs  solver.rs
crates/gadget-ng-pm/tests/: pm_uniform_zero_force.rs  pm_vs_direct.rs  proptest_invariants.rs
crates/gadget-ng-rt/: Cargo.toml
crates/gadget-ng-rt/benches/: ap21_chemistry.rs
crates/gadget-ng-sph/: Cargo.toml
crates/gadget-ng-tree/: Cargo.toml
crates/gadget-ng-treepm/: Cargo.toml
crates/gadget-ng-vis/: Cargo.toml
(+1597 files in other folders)
