[workspace]
resolver = "2"
members = [
    "crates/gadget-ng-core",
    "crates/gadget-ng-integrators",
    "crates/gadget-ng-parallel",
    "crates/gadget-ng-io",
    "crates/gadget-ng-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
figment = { version = "0.10.19", features = ["toml", "env"] }
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0.12"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = { version = "0.4.40", features = ["serde"] }
mpi = { version = "0.8.0", default-features = false }
