[workspace]
resolver = "2"
members = [
    "crates/gadget-ng-core",
    "crates/gadget-ng-integrators",
    "crates/gadget-ng-parallel",
    "crates/gadget-ng-io",
    "crates/gadget-ng-tree",
    "crates/gadget-ng-gpu",
    "crates/gadget-ng-pm",
    "crates/gadget-ng-treepm",
    "crates/gadget-ng-cuda",
    "crates/gadget-ng-hip",
    "crates/gadget-ng-cli",
    "crates/gadget-ng-analysis",
    "crates/gadget-ng-mhd",
    "crates/gadget-ng-sph",
    "crates/gadget-ng-rt",
    "crates/gadget-ng-vis",
    "crates/gadget-ng-physics",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Excepciones para código científico/HPC donde son patrones legítimos:
cast_precision_loss = "allow"     # f64 -> f32 es habitual en HPC
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow" # ej. PhysicsPhysics no aplica aquí
many_single_char_names = "allow"  # x, y, z, k, a son convenciones físicas
too_many_arguments = "allow"      # funciones de física con muchos parámetros
too_many_lines = "allow"
similar_names = "allow"           # omega_m / omega_lambda son distintos
wildcard_imports = "allow"        # ok en módulos de tests internos

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "1.1.2"
figment = { version = "0.10.19", features = ["toml", "env"] }
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0.12"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = { version = "0.4.40", features = ["serde"] }
mpi = { version = "0.8.0", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
