[package]
name = "gadget-ng-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Análisis in-situ para gadget-ng: FoF, power spectrum P(k), catálogos de halos"

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
serde.workspace = true
serde_json.workspace = true
rustfft = "6.4.1"

[dev-dependencies]
approx   = "0.5"
tempfile = "3"
