[package]
name = "gadget-ng-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Análisis in-situ para gadget-ng: FoF, power spectrum P(k), catálogos de halos"

[features]
default = []
parallel = ["dep:gadget-ng-parallel"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-parallel = { path = "../gadget-ng-parallel", optional = true }
serde.workspace = true
serde_json.workspace = true
rustfft = "6.4.1"

[dev-dependencies]
approx   = "0.5"
tempfile = "3"
