[package]
name = "gadget-ng-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gadget-ng CLI binary"

[[bin]]
name = "gadget-ng"
path = "src/main.rs"

[features]
default = []
mpi = ["gadget-ng-parallel/mpi"]
netcdf = ["gadget-ng-io/netcdf"]
gpu = []
simd = ["gadget-ng-core/simd"]
full = ["mpi", "netcdf", "gpu", "simd"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core", features = [] }
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
gadget-ng-parallel = { path = "../gadget-ng-parallel" }
gadget-ng-io = { path = "../gadget-ng-io" }
clap.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.19"
