[package]
name = "gadget-ng-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gadget-ng CLI binary"

[[bin]]
name = "gadget-ng"
path = "src/main.rs"

[features]
default = []
mpi = ["gadget-ng-parallel/mpi"]
bincode = ["gadget-ng-io/bincode"]
hdf5 = ["gadget-ng-io/hdf5"]
gpu = ["dep:gadget-ng-gpu", "gadget-ng-core/gpu"]
cuda = ["dep:gadget-ng-cuda"]
hip  = ["dep:gadget-ng-hip"]
simd = ["gadget-ng-core/simd", "gadget-ng-tree/simd", "dep:rayon"]
pm-rayon = ["gadget-ng-pm/rayon", "gadget-ng-treepm/rayon"]
msgpack = ["gadget-ng-io/msgpack"]
netcdf = ["gadget-ng-io/netcdf"]
full = ["mpi", "bincode", "hdf5", "gpu", "simd", "pm-rayon", "msgpack", "netcdf"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core", features = [] }
gadget-ng-tree = { path = "../gadget-ng-tree" }
gadget-ng-pm = { path = "../gadget-ng-pm" }
gadget-ng-treepm = { path = "../gadget-ng-treepm" }
gadget-ng-gpu  = { path = "../gadget-ng-gpu",  optional = true }
gadget-ng-cuda = { path = "../gadget-ng-cuda", optional = true }
gadget-ng-hip  = { path = "../gadget-ng-hip",  optional = true }
rayon = { version = "1.10", optional = true }
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
gadget-ng-parallel = { path = "../gadget-ng-parallel" }
gadget-ng-io       = { path = "../gadget-ng-io" }
gadget-ng-analysis = { path = "../gadget-ng-analysis" }
gadget-ng-vis      = { path = "../gadget-ng-vis" }
clap.workspace = true
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.19"
