[package]
name = "gadget-ng-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "N-body core: particles, Plummer-softened direct gravity, traits"

[features]
default = []
simd = ["dep:rayon"]
gpu = ["dep:gadget-ng-gpu"]

[dependencies]
gadget-ng-gpu-layout = { path = "../gadget-ng-gpu-layout" }
serde.workspace = true
thiserror.workspace = true
rustfft = "6.4.1"
rayon = { version = "1.10", optional = true }
gadget-ng-gpu = { path = "../gadget-ng-gpu", optional = true }

[dev-dependencies]
approx = "0.5"
criterion.workspace = true

[[bench]]
name = "direct_gravity"
harness = false
required-features = []
