[package]
name = "gadget-ng-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solver PM GPU con CUDA (nvcc + cuFFT). Requiere CUDA Toolkit instalado."

# Sin dependencias de Rust en tiempo de compilación sobre CUDA:
# el kernel C/CUDA se compila en build.rs con nvcc y se enlaza como librería estática.
# Si nvcc no está disponible, build.rs emite cuda_unavailable y el crate provee stubs.
[lib]

[features]
default = []
simd = ["gadget-ng-core/simd"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-mhd = { path = "../gadget-ng-mhd" }
gadget-ng-rt = { path = "../gadget-ng-rt" }
gadget-ng-sph = { path = "../gadget-ng-sph" }

[dev-dependencies]
criterion.workspace = true
gadget-ng-pm = { path = "../gadget-ng-pm" }

[[bench]]
name = "cuda_vs_simd"
harness = false
required-features = ["simd"]

[build-dependencies]
