[package]
name = "gadget-ng-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU gravity kernels (placeholder) — SoA data layout"

[features]
default = []

[dependencies]
pollster = "0.4.0"
wgpu = "29.0.1"

[dev-dependencies]
tempfile = "3"
criterion.workspace = true
gadget-ng-cuda = { path = "../gadget-ng-cuda" }
gadget-ng-hip = { path = "../gadget-ng-hip" }

[[bench]]
name = "gpu_vs_cpu"
harness = false
