[package]
name = "gadget-ng-integrators"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Time integration: leapfrog KDK"

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
