[package]
name = "gadget-ng-integrators"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Time integration: leapfrog KDK"

[features]
default = []
rayon = ["dep:rayon"]
simd = []

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
rayon = { version = "1.10", optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
tempfile.workspace = true
