[package]
name = "gadget-ng-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned snapshots and provenance"

[features]
default = []
bincode = ["dep:bincode"]
hdf5 = ["dep:hdf5", "dep:ndarray"]
msgpack = ["dep:rmp-serde"]
netcdf = ["dep:netcdf"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
hdf5 = { package = "hdf5-metno", version = "0.12.4", optional = true }
ndarray = { version = "0.17.2", optional = true }
rmp-serde = { version = "1.3.1", optional = true }
netcdf = { version = "0.12.0", optional = true }

[dev-dependencies]
tempfile = "3"
