[package]
name = "gadget-ng-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned snapshots and provenance"

[features]
default = []
bincode = ["dep:bincode"]
hdf5 = ["dep:hdf5", "dep:ndarray"]
# hdf5-parallel: habilita escritura/lectura HDF5 colectiva vía MPI-IO.
# Requiere que HDF5 del sistema esté compilado con soporte MPI (--enable-parallel).
# En modo serial (P=1) el comportamiento es idéntico al writer hdf5 estándar.
hdf5-parallel = ["hdf5", "dep:gadget-ng-parallel"]
msgpack = ["dep:rmp-serde"]
netcdf = ["dep:netcdf"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-parallel = { path = "../gadget-ng-parallel", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
hdf5 = { package = "hdf5-metno", version = "0.12.4", optional = true }
ndarray = { version = "0.17.2", optional = true }
rmp-serde = { version = "1.3.1", optional = true }
netcdf = { version = "0.12.0", optional = true }

[dev-dependencies]
tempfile = "3"
