[package]
name = "gadget-ng-mhd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Magnetohydrodynamics (MHD) for gadget-ng simulations"

[features]
default = []
simd = ["dep:rayon"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "alfven_bench"
harness = false

[[bench]]
name = "advanced_bench"
harness = false
