[package]
name = "gadget-ng-mhd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Magnetohydrodynamics (MHD) for gadget-ng simulations"

[features]
default = []
rayon = ["dep:rayon"]
simd = []
# Bench-only: compila todas las rutas Dedner (serial, Rayon, SIMD+Rayon, SIMD forzado AVX2/AVX-512 sin Rayon)
# para `dedner_cleaning_step_with_backend` y Criterion.
bench-all-dedner-paths = ["rayon", "simd"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "alfven_bench"
harness = false

[[bench]]
name = "advanced_bench"
harness = false

[[bench]]
name = "simd_cpu_bench"
harness = false
required-features = ["simd"]

[[bench]]
name = "dedner_backend_bench"
harness = false
required-features = ["bench-all-dedner-paths"]
