[package]
name = "gadget-ng-pm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Particle-Mesh (PM) gravity solver — FFT periódico 3D para gadget-ng"

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
rustfft = "6.4.1"

[dev-dependencies]
tempfile = "3"
