[package]
name = "gadget-ng-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transferencia radiativa M1 para gadget-ng (Phase 81)"

[features]
default = []
mpi = ["dep:mpi"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-sph  = { path = "../gadget-ng-sph" }
serde.workspace = true
mpi = { workspace = true, optional = true }
rustfft = "6.4.1"

[dev-dependencies]
approx = "0.5"
