[package]
name = "gadget-ng-sph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
rayon = "1.10"
serde.workspace = true

[dev-dependencies]
approx = "0.5"
criterion.workspace = true

[[bench]]
name = "agn_feedback"
harness = false
