[package]
name = "gadget-ng-sph"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
rayon = { version = "1.10", optional = true }
serde.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "agn_feedback"
harness = false

[[bench]]
name = "baryonic_stack"
harness = false
