[package]
name = "gadget-ng-sph"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rayon = ["dep:rayon"]
simd = []
# Bench-only: exposes sph_gadget2_update_for_particle_scalar_ref (pre-AP21 baseline)
# and compute_sph_forces_gadget2_scalar_ref for Criterion comparison.
bench-sph-forces-ref = ["rayon"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
rayon = { version = "1.10", optional = true }
serde.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "agn_feedback"
harness = false

[[bench]]
name = "baryonic_stack"
harness = false

[[bench]]
name = "ap21_sph_forces"
harness = false
required-features = ["bench-sph-forces-ref"]
