[package]
name = "gadget-ng-tree"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Octree y solver Barnes-Hut para gadget-ng"

[features]
default = []
gpu = ["dep:gadget-ng-gpu"]
simd = ["dep:rayon", "gadget-ng-core/simd"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-gpu = { path = "../gadget-ng-gpu", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
gadget-ng-integrators = { path = "../gadget-ng-integrators" }
approx = "0.5"
criterion.workspace = true

[[bench]]
name = "bh_gravity"
harness = false
