[package]
name = "gadget-ng-treepm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TreePM gravity solver para gadget-ng — Barnes-Hut (corto alcance) + PM filtrado (largo alcance)"

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-tree = { path = "../gadget-ng-tree" }
gadget-ng-pm   = { path = "../gadget-ng-pm" }

[dev-dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
