[package]
name = "gadget-ng-treepm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TreePM gravity solver para gadget-ng — Barnes-Hut (corto alcance) + PM filtrado (largo alcance)"

[features]
default = []
rayon = ["dep:rayon", "gadget-ng-pm/rayon"]

[dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
gadget-ng-tree = { path = "../gadget-ng-tree" }
gadget-ng-pm   = { path = "../gadget-ng-pm" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
gadget-ng-core = { path = "../gadget-ng-core" }
criterion.workspace = true

[[bench]]
name = "treepm_gravity"
harness = false
